// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`experiments module should handle "requestExperiments" action 1`] = `
Array [
  Object {
    "type": "experiments/experiments/REQUEST_EXPERIMENTS",
  },
  Object {
    "payload": Object {
      "results": Array [
        Object {
          "collected": "2017-03-01T21:42:46.817Z",
          "file": "payment_grocery_invoice.wax",
          "geoDistance": Object {
            "analysed": "2016-10-15T22:19:58.241Z",
            "engine": "numquam",
            "experiments": Array [],
            "id": "591ab838d1f7fd000e50851b",
            "version": "v40896",
          },
          "id": "591ab838d1f7fd000e50851a",
          "jaccardIndex": Object {
            "analysed": "2016-07-16T04:52:03.311Z",
            "engine": "et",
            "experiments": Array [],
            "id": "591ab838d1f7fd000e50851d",
            "version": "v86673",
          },
          "location": Object {
            "id": "591ab838d1f7fd000e50851e",
            "lat": -7.9776,
            "lng": -105.9862,
            "name": "West Ethaport",
          },
          "metadata": Object {
            "anatomicalOrigin": "Other known site",
            "art": "false",
            "bmi": 21.92948782577033,
            "cityIsolate": "West Walterborough",
            "collectionDate": "2016-10-24T10:04:46.023Z",
            "continuationStartDate": "2016-06-15T01:24:40.492Z",
            "continuationStopDate": "2016-07-31T11:54:48.442Z",
            "countryIsolate": "Saint Lucia",
            "countryOfBirth": "Tajikistan",
            "currentTbinformation": true,
            "dateArrived": "2016-08-01T02:22:44.142Z",
            "dateOfDeath": "2016-06-23T08:46:28.140Z",
            "diabetic": "true",
            "genderAtBirth": "female",
            "genexpert": "RIF resistant",
            "hain": "INH/RIF test",
            "hainAm": "AM inconclusive",
            "hainEth": "ETH test failed",
            "hainFl": "FL test failed",
            "hainInh": "INH resistant",
            "hainRif": "RIF resistant",
            "hivStatus": "true",
            "homeless": "true",
            "id": "591ab837d1f7fd000e508437",
            "imprisoned": "false",
            "injectingDrugUse": "false",
            "intensiveStartDate": "2016-06-05T10:43:58.807Z",
            "intensiveStopDate": "2017-01-04T00:51:38.707Z",
            "isolateId": "d330573a-64e5-4511-bc2a-3ab1dbdd898c",
            "labId": "76a923a7-32e8-45ea-bd03-f3d448fa26a0",
            "nonStandardTreatment": "No",
            "otherGenotypeInformation": false,
            "patientAge": 25,
            "patientId": "8af73cc8-7314-4e65-bd72-93b0ae93b471",
            "phenotypeInformationFirstLineDrugs": false,
            "phenotypeInformationOtherDrugs": true,
            "previousTbinformation": true,
            "priorTreatmentDate": "2016-08-07T01:36:49.818Z",
            "prospectiveIsolate": true,
            "recentMdrTb": "Yes",
            "siteId": "98fa2136-28e8-44ce-bf7d-3382f2a7afe1",
            "smear": "++",
            "smoker": "false",
            "sputumCultureConversion": "Sputum culture negative at 2-3 months",
            "sputumSmearConversion": "Not known or not done",
            "startProgrammaticContinuationTreatment": "Yes",
            "startProgrammaticTreatment": false,
            "tbProphylaxis": "Not known",
            "tbProphylaxisDate": "2016-10-18T09:41:31.618Z",
            "wgsPlatform": "NextSeq",
            "wgsPlatformOther": "ullam",
            "whoOutcomeCategory": "Not known",
          },
          "organisation": Object {
            "id": "591ab833d1f7fd000e5083d3",
            "name": "Casper Group",
          },
          "owner": Object {
            "email": "Kendrick.Stamm@yahoo.com",
            "firstname": "Willy",
            "id": "591ab833d1f7fd000e508405",
            "lastname": "Hackett",
            "phone": "957-443-3870 x5326",
          },
          "snpDistance": Object {
            "analysed": "2017-02-25T13:44:01.747Z",
            "engine": "quia",
            "experiments": Array [],
            "id": "591ab838d1f7fd000e50851c",
            "version": "v93582",
          },
          "uploaded": "2016-11-24T23:48:42.488Z",
        },
        Object {
          "collected": "2017-05-16T03:17:59.282Z",
          "file": "configuration.com",
          "geoDistance": Object {
            "analysed": "2017-03-10T18:09:49.306Z",
            "engine": "nihil",
            "experiments": Array [],
            "id": "591ab838d1f7fd000e5084f8",
            "version": "v41776",
          },
          "id": "591ab838d1f7fd000e5084f7",
          "jaccardIndex": Object {
            "analysed": "2016-10-29T06:54:31.060Z",
            "engine": "eligendi",
            "experiments": Array [],
            "id": "591ab838d1f7fd000e5084fa",
            "version": "v82933",
          },
          "location": Object {
            "id": "591ab838d1f7fd000e5084fb",
            "lat": 15.892,
            "lng": 61.2435,
            "name": "Mohamedberg",
          },
          "metadata": Object {
            "anatomicalOrigin": "Other known site",
            "art": "true",
            "bmi": 23.7909730169333,
            "cityIsolate": "Howeview",
            "collectionDate": "2016-12-13T15:56:17.124Z",
            "continuationStartDate": "2017-05-07T18:53:06.144Z",
            "continuationStopDate": "2016-09-23T06:31:23.538Z",
            "countryIsolate": "South Africa",
            "countryOfBirth": "Saudi Arabia",
            "currentTbinformation": true,
            "dateArrived": "2016-12-23T21:57:37.274Z",
            "dateOfDeath": "2016-12-06T00:01:06.750Z",
            "diabetic": "true",
            "genderAtBirth": "male",
            "genexpert": "Not tested",
            "hain": "Fluoroquinolone / aminoglycoside / ethambutol test",
            "hainAm": "AM test failed",
            "hainEth": "ETH resistant",
            "hainFl": "FL sensitive ",
            "hainInh": "INH resistant",
            "hainRif": "RIF inconclusive",
            "hivStatus": "true",
            "homeless": "true",
            "id": "591ab837d1f7fd000e508427",
            "imprisoned": "true",
            "injectingDrugUse": "false",
            "intensiveStartDate": "2017-05-07T09:07:17.599Z",
            "intensiveStopDate": "2017-05-11T22:31:01.111Z",
            "isolateId": "30ccea50-3c19-4c7a-b0a7-07bc791520f2",
            "labId": "9eb49874-5cf6-4c79-a55d-2a2155bf9459",
            "nonStandardTreatment": "Yes",
            "otherGenotypeInformation": false,
            "patientAge": 60,
            "patientId": "df405f1b-30bf-4b36-bdb8-763f6de8bed2",
            "phenotypeInformationFirstLineDrugs": false,
            "phenotypeInformationOtherDrugs": false,
            "previousTbinformation": false,
            "priorTreatmentDate": "2017-05-12T20:19:53.138Z",
            "prospectiveIsolate": false,
            "recentMdrTb": "Not known",
            "siteId": "049fb71d-8157-412e-a289-e5c74cf3d1ef",
            "smear": "+",
            "smoker": "false",
            "sputumCultureConversion": "Sputum culture positive at 2-3 months",
            "sputumSmearConversion": "Not known or not done",
            "startProgrammaticContinuationTreatment": "Not known",
            "startProgrammaticTreatment": true,
            "tbProphylaxis": "Not known",
            "tbProphylaxisDate": "2016-10-17T22:25:29.319Z",
            "wgsPlatform": "Other",
            "wgsPlatformOther": "in",
            "whoOutcomeCategory": "Lost to follow-up or defaulted",
          },
          "organisation": Object {
            "id": "591ab833d1f7fd000e5083c3",
            "name": "Ward - Auer",
          },
          "owner": Object {
            "email": "Anya46@yahoo.com",
            "firstname": "Saige",
            "id": "591ab833d1f7fd000e5083f5",
            "lastname": "Marks",
            "phone": "(773) 716-1334",
          },
          "snpDistance": Object {
            "analysed": "2017-01-21T01:52:11.092Z",
            "engine": "enim",
            "experiments": Array [],
            "id": "591ab838d1f7fd000e5084f9",
            "version": "v80049",
          },
          "uploaded": "2016-10-26T17:12:17.333Z",
        },
      ],
      "summary": Object {
        "hits": 2,
      },
    },
    "type": "experiments/experiments/REQUEST_EXPERIMENTS_SUCCESS",
  },
]
`;

exports[`experiments module should handle "requestExperiments" action 2`] = `
Object {
  "isFetching": false,
  "samples": Array [
    Object {
      "collected": "2017-03-01T21:42:46.817Z",
      "file": "payment_grocery_invoice.wax",
      "geoDistance": Object {
        "analysed": "2016-10-15T22:19:58.241Z",
        "engine": "numquam",
        "experiments": Array [],
        "id": "591ab838d1f7fd000e50851b",
        "version": "v40896",
      },
      "id": "591ab838d1f7fd000e50851a",
      "jaccardIndex": Object {
        "analysed": "2016-07-16T04:52:03.311Z",
        "engine": "et",
        "experiments": Array [],
        "id": "591ab838d1f7fd000e50851d",
        "version": "v86673",
      },
      "location": Object {
        "id": "591ab838d1f7fd000e50851e",
        "lat": -7.9776,
        "lng": -105.9862,
        "name": "West Ethaport",
      },
      "metadata": Object {
        "anatomicalOrigin": "Other known site",
        "art": "false",
        "bmi": 21.92948782577033,
        "cityIsolate": "West Walterborough",
        "collectionDate": "2016-10-24T10:04:46.023Z",
        "continuationStartDate": "2016-06-15T01:24:40.492Z",
        "continuationStopDate": "2016-07-31T11:54:48.442Z",
        "countryIsolate": "Saint Lucia",
        "countryOfBirth": "Tajikistan",
        "currentTbinformation": true,
        "dateArrived": "2016-08-01T02:22:44.142Z",
        "dateOfDeath": "2016-06-23T08:46:28.140Z",
        "diabetic": "true",
        "genderAtBirth": "female",
        "genexpert": "RIF resistant",
        "hain": "INH/RIF test",
        "hainAm": "AM inconclusive",
        "hainEth": "ETH test failed",
        "hainFl": "FL test failed",
        "hainInh": "INH resistant",
        "hainRif": "RIF resistant",
        "hivStatus": "true",
        "homeless": "true",
        "id": "591ab837d1f7fd000e508437",
        "imprisoned": "false",
        "injectingDrugUse": "false",
        "intensiveStartDate": "2016-06-05T10:43:58.807Z",
        "intensiveStopDate": "2017-01-04T00:51:38.707Z",
        "isolateId": "d330573a-64e5-4511-bc2a-3ab1dbdd898c",
        "labId": "76a923a7-32e8-45ea-bd03-f3d448fa26a0",
        "nonStandardTreatment": "No",
        "otherGenotypeInformation": false,
        "patientAge": 25,
        "patientId": "8af73cc8-7314-4e65-bd72-93b0ae93b471",
        "phenotypeInformationFirstLineDrugs": false,
        "phenotypeInformationOtherDrugs": true,
        "previousTbinformation": true,
        "priorTreatmentDate": "2016-08-07T01:36:49.818Z",
        "prospectiveIsolate": true,
        "recentMdrTb": "Yes",
        "siteId": "98fa2136-28e8-44ce-bf7d-3382f2a7afe1",
        "smear": "++",
        "smoker": "false",
        "sputumCultureConversion": "Sputum culture negative at 2-3 months",
        "sputumSmearConversion": "Not known or not done",
        "startProgrammaticContinuationTreatment": "Yes",
        "startProgrammaticTreatment": false,
        "tbProphylaxis": "Not known",
        "tbProphylaxisDate": "2016-10-18T09:41:31.618Z",
        "wgsPlatform": "NextSeq",
        "wgsPlatformOther": "ullam",
        "whoOutcomeCategory": "Not known",
      },
      "organisation": Object {
        "id": "591ab833d1f7fd000e5083d3",
        "name": "Casper Group",
      },
      "owner": Object {
        "email": "Kendrick.Stamm@yahoo.com",
        "firstname": "Willy",
        "id": "591ab833d1f7fd000e508405",
        "lastname": "Hackett",
        "phone": "957-443-3870 x5326",
      },
      "snpDistance": Object {
        "analysed": "2017-02-25T13:44:01.747Z",
        "engine": "quia",
        "experiments": Array [],
        "id": "591ab838d1f7fd000e50851c",
        "version": "v93582",
      },
      "uploaded": "2016-11-24T23:48:42.488Z",
    },
    Object {
      "collected": "2017-05-16T03:17:59.282Z",
      "file": "configuration.com",
      "geoDistance": Object {
        "analysed": "2017-03-10T18:09:49.306Z",
        "engine": "nihil",
        "experiments": Array [],
        "id": "591ab838d1f7fd000e5084f8",
        "version": "v41776",
      },
      "id": "591ab838d1f7fd000e5084f7",
      "jaccardIndex": Object {
        "analysed": "2016-10-29T06:54:31.060Z",
        "engine": "eligendi",
        "experiments": Array [],
        "id": "591ab838d1f7fd000e5084fa",
        "version": "v82933",
      },
      "location": Object {
        "id": "591ab838d1f7fd000e5084fb",
        "lat": 15.892,
        "lng": 61.2435,
        "name": "Mohamedberg",
      },
      "metadata": Object {
        "anatomicalOrigin": "Other known site",
        "art": "true",
        "bmi": 23.7909730169333,
        "cityIsolate": "Howeview",
        "collectionDate": "2016-12-13T15:56:17.124Z",
        "continuationStartDate": "2017-05-07T18:53:06.144Z",
        "continuationStopDate": "2016-09-23T06:31:23.538Z",
        "countryIsolate": "South Africa",
        "countryOfBirth": "Saudi Arabia",
        "currentTbinformation": true,
        "dateArrived": "2016-12-23T21:57:37.274Z",
        "dateOfDeath": "2016-12-06T00:01:06.750Z",
        "diabetic": "true",
        "genderAtBirth": "male",
        "genexpert": "Not tested",
        "hain": "Fluoroquinolone / aminoglycoside / ethambutol test",
        "hainAm": "AM test failed",
        "hainEth": "ETH resistant",
        "hainFl": "FL sensitive ",
        "hainInh": "INH resistant",
        "hainRif": "RIF inconclusive",
        "hivStatus": "true",
        "homeless": "true",
        "id": "591ab837d1f7fd000e508427",
        "imprisoned": "true",
        "injectingDrugUse": "false",
        "intensiveStartDate": "2017-05-07T09:07:17.599Z",
        "intensiveStopDate": "2017-05-11T22:31:01.111Z",
        "isolateId": "30ccea50-3c19-4c7a-b0a7-07bc791520f2",
        "labId": "9eb49874-5cf6-4c79-a55d-2a2155bf9459",
        "nonStandardTreatment": "Yes",
        "otherGenotypeInformation": false,
        "patientAge": 60,
        "patientId": "df405f1b-30bf-4b36-bdb8-763f6de8bed2",
        "phenotypeInformationFirstLineDrugs": false,
        "phenotypeInformationOtherDrugs": false,
        "previousTbinformation": false,
        "priorTreatmentDate": "2017-05-12T20:19:53.138Z",
        "prospectiveIsolate": false,
        "recentMdrTb": "Not known",
        "siteId": "049fb71d-8157-412e-a289-e5c74cf3d1ef",
        "smear": "+",
        "smoker": "false",
        "sputumCultureConversion": "Sputum culture positive at 2-3 months",
        "sputumSmearConversion": "Not known or not done",
        "startProgrammaticContinuationTreatment": "Not known",
        "startProgrammaticTreatment": true,
        "tbProphylaxis": "Not known",
        "tbProphylaxisDate": "2016-10-17T22:25:29.319Z",
        "wgsPlatform": "Other",
        "wgsPlatformOther": "in",
        "whoOutcomeCategory": "Lost to follow-up or defaulted",
      },
      "organisation": Object {
        "id": "591ab833d1f7fd000e5083c3",
        "name": "Ward - Auer",
      },
      "owner": Object {
        "email": "Anya46@yahoo.com",
        "firstname": "Saige",
        "id": "591ab833d1f7fd000e5083f5",
        "lastname": "Marks",
        "phone": "(773) 716-1334",
      },
      "snpDistance": Object {
        "analysed": "2017-01-21T01:52:11.092Z",
        "engine": "enim",
        "experiments": Array [],
        "id": "591ab838d1f7fd000e5084f9",
        "version": "v80049",
      },
      "uploaded": "2016-10-26T17:12:17.333Z",
    },
  ],
  "total": 2,
}
`;
